# txt-lang-stats

./: LICENSE  README-TEMPLATE.md  README.md  pyproject.toml
src/txt_lang_stats/: __init__.py
