[project]
name = "txt-lang-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
txt-lang-stats = "txt_lang_stats:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
